# inegi-mcp-server

./: .env.example  .gitignore  AZURE_DEPLOYMENT.md  LICENSE  README.md  push_to_github.sh  pyproject.toml
src/inegi_mcp/: __init__.py  config.py  server.py
src/inegi_mcp/clients/: __init__.py  denue_client.py  indicadores_client.py
src/inegi_mcp/tools/: __init__.py  denue_tools.py  indicadores_tools.py
